fix: change base styling on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,14 @@ body {
   background: #111111;
 }
 
+
+@media only screen and (max-device-width: 640px) {
+  html,
+  body {
+    font-size: 14px;
+  }
+}
+
 a {
   color: inherit;
   text-decoration: none;
